--- a/roles/nginx-puma/templates/etc_nginx_sites-available.conf.j2
+++ b/roles/nginx-puma/templates/etc_nginx_sites-available.conf.j2
@@ -1,12 +1,14 @@
+# TODO: incorporate rails_env
+
 upstream {{ app_name }} {
-  server unix://{{deploy_directory}}/shared/tmp/sockets/puma_{{ app_name }}.sock;
+  server unix://{{deploy_directory}}/shared/tmp/sockets/puma.sock;
 }
 
 server {
   gzip on;
   listen 80;
 
-  gzip_types text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript application/json;                                                                      
+  gzip_types text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript application/json;
   server_name {{ app_domain }};
   root {{ deploy_directory }}/current/public;
 
@@ -14,6 +16,7 @@ server {
     proxy_pass http://{{ app_name }}; # match the name of upstream directive which is defined above
     proxy_set_header Host $host;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_read_timeout 150;
   }
 
   location /robots.txt {}
@@ -22,7 +25,7 @@ server {
     expires 1y;
     log_not_found off;
   }
-  
+
   location ~ ^/(assets|images|javascripts|stylesheets|swfs|system)/ {
     gzip_static on;
     expires     max;
@@ -31,5 +34,5 @@ server {
     add_header  ETag "";
 
     break;
-  }  
+  }
 }
