--- a/roles/nginx-puma/templates/etc_puma.conf.j2
+++ b/roles/nginx-puma/templates/etc_puma.conf.j2
@@ -1,1 +1,1 @@
-{{deploy_directory}}/current,deploy,{{deploy_directory}}/current/config/puma/production.rb,{{deploy_directory}}/current/log/puma.log
+{{deploy_directory}}/current,deploy,{{deploy_directory}}/current/config/puma.rb,{{deploy_directory}}/current/log/puma.log
