--- a/roles/nginx-puma/templates/etc_init_puma.j2
+++ b/roles/nginx-puma/templates/etc_init_puma.j2
@@ -32,5 +32,5 @@ instance {{deploy_directory}}/current
 script
 cd {{deploy_directory}}/current
 logger -t puma "Starting server: $app"
-exec bundle exec puma -C {{deploy_directory}}/current/config/puma.rb
+bash -lc "exec bundle exec puma -C {{deploy_directory}}/current/config/puma.rb"
 end script
