--- a/roles/nginx-puma/templates/etc_nginx_sites-available.conf.j2
+++ b/roles/nginx-puma/templates/etc_nginx_sites-available.conf.j2
@@ -1,7 +1,5 @@
-# TODO: incorporate rails_env
-
-upstream {{ app_name }} {
-  server unix://{{deploy_directory}}/shared/tmp/sockets/puma.sock;
+upstream {{ rails.app }} {
+  server unix://{{deploy.directory}}/shared/tmp/sockets/puma.sock;
 }
 
 server {
@@ -9,11 +7,15 @@ server {
   listen 80;
 
   gzip_types text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript application/json;
-  server_name {{ app_domain }};
-  root {{ deploy_directory }}/current/public;
+
+  {% for domain in rails.domains %}
+  server_name {{ domain }};
+  {% endfor %}
+
+  root {{ deploy.directory }}/current/public;
 
   location / {
-    proxy_pass http://{{ app_name }}; # match the name of upstream directive which is defined above
+    proxy_pass http://{{ rails.app }}; # match the name of upstream directive which is defined above
     proxy_set_header Host $host;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_read_timeout 150;
