--- a/roles/nginx-puma/templates/etc_puma.conf.j2
+++ b/roles/nginx-puma/templates/etc_puma.conf.j2
@@ -1,1 +1,1 @@
-{{deploy_directory}}/current,deploy,{{deploy_directory}}/current/config/puma.rb,{{deploy_directory}}/current/log/puma.log
+{{deploy.directory}}/current,deploy,{{deploy.directory}}/current/config/puma.rb,{{deploy.directory}}/current/log/puma.log
