--- a/roles/nginx-puma/templates/puma.rb.j2
+++ b/roles/nginx-puma/templates/puma.rb.j2
@@ -6,14 +6,14 @@ on_worker_boot do
   require "active_record"
   cwd = File.dirname(__FILE__)+"/.."
   ActiveRecord::Base.connection.disconnect! rescue ActiveRecord::ConnectionNotEstablished
-  ActiveRecord::Base.establish_connection(ENV["DATABASE_URL"] || YAML.load_file("#{cwd}/config/database.yml")["{{ rails_env }}"])
+  ActiveRecord::Base.establish_connection(ENV["DATABASE_URL"] || YAML.load_file("#{cwd}/config/database.yml")["{{ rails.env }}"])
 end
 
-bind 'unix://{{deploy_directory}}/shared/tmp/sockets/puma.sock'
-environment '{{ rails_env }}'
-pidfile "{{deploy_directory}}/shared/tmp/puma.pid"
-state_path "{{deploy_directory}}/shared/tmp/sockets/puma.state"
+bind 'unix://{{deploy.directory}}/shared/tmp/sockets/puma.sock'
+environment '{{ rails.env }}'
+pidfile "{{deploy.directory}}/shared/tmp/puma.pid"
+state_path "{{deploy.directory}}/shared/tmp/sockets/puma.state"
 
-rackup '{{deploy_directory}}/current/config.ru'
+rackup '{{deploy.directory}}/current/config.ru'
 
 activate_control_app
