--- a/roles/rails/templates/database.yml.j2
+++ b/roles/rails/templates/database.yml.j2
@@ -1,5 +1,5 @@
-{{ rails_env }}:
-  adapter:  {{ db_adapter }}
-  database: {{ db_name }}
-  username: {{ db_user }}
-  password: {{ db_password }}
+{{ rails.env }}:
+  adapter:  {{ db.adapter }}
+  database: {{ db.name }}
+  username: {{ db.user }}
+  password: {{ db.password }}
