--- a/roles/nginx-puma/templates/etc_nginx_sites-available.conf.j2
+++ b/roles/nginx-puma/templates/etc_nginx_sites-available.conf.j2
@@ -23,18 +23,17 @@ server {
 
   location /robots.txt {}
 
-  location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
+  location ~ ^/assets/ {
+    # Per RFC2616 - 1 year maximum expiry
     expires 1y;
-    log_not_found off;
-  }
+    add_header Cache-Control public;
 
-  location ~ ^/(assets|images|javascripts|stylesheets|swfs|system)/ {
-    gzip_static on;
-    expires     max;
-    add_header  Cache-Control public;
-    add_header  Last-Modified "";
-    add_header  ETag "";
-
+    # Some browsers still send conditional-GET requests if there's a
+    # Last-Modified header or an ETag header even if they haven't
+    # reached the expiry date sent in the Expires header.
+    add_header Last-Modified "";
+    add_header ETag "";
     break;
   }
+
 }
